styling hero on mobile and fix header

--- a/website/src/styles/_theme.scss
+++ b/website/src/styles/_theme.scss
@@ -22,7 +22,7 @@ $yiq-text-dark: $sol-secondary;
 $h6-font-size: $font-size-base;
 $headings-margin-bottom: 15px;
 
-
+$grid-gutter-width: 40px;
 
 $theme-colors: (
   "primary": $sol-primary,
